@@ -1,3 +1,9 @@
+*** 20001110_1 by lusky
+updated rehash help message
+parser fix
+make ADMIN non-hunting for unregistered connections
+
+
 *** 20001108_2 by lusky
 don't allow VERSION from unregistered clients
 
